# bamboo

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  UPGRADING.md  build.rs  build.sh  config.yml  data-config-example.toml  default.yml  proxy-default.yml  proxy.yml  rustfmt.toml  server.yml
bb_cli/: Cargo.toml
bb_cli/src/: command.rs  conn.rs  handle.rs  main.rs
bb_cli/src/cli/: line.rs  mod.rs
bb_cli/src/status/: mod.rs
bb_common/: Cargo.toml
bb_common/benches/: chunk.rs  fast_math.rs
bb_common/src/: lib.rs  registry.rs  version.rs
bb_common/src/chunk/: chunk.rs  fixed.rs  light.rs  mod.rs  section.rs
bb_common/src/config/: mod.rs  tests.rs  toml.rs  types.rs
bb_common/src/config_yml/: mod.rs  types.rs
bb_common/src/math/: chunk_pos.rs  der.rs  fast.rs  fpos.rs  mod.rs  pos.rs  rel_pos.rs  vec.rs
bb_common/src/metadata/: mod.rs
bb_common/src/nbt/: deserialize.rs  mod.rs  serialize.rs
bb_common/src/net/: cb.rs  mod.rs  sb.rs
bb_common/src/util/: buffer.rs  chat.rs  item.rs  mod.rs  pool.rs
bb_data/: Cargo.toml
bb_data/src/: dl.rs  lib.rs
bb_data/src/block/: cross.rs  gen.rs  mod.rs
bb_data/src/command/: cross.rs  gen.rs  mod.rs
bb_data/src/enchantment/: cross.rs  gen.rs  mod.rs
bb_data/src/entity/: cross.rs  gen.rs  mod.rs
bb_data/src/item/: cross.rs  gen.rs  mod.rs
bb_data/src/particle/: conv.rs  cross.rs  gen.rs  mod.rs
bb_data/src/prismarine/: mod.rs
bb_data/src/protocol/: convert.rs  gen.rs  mod.rs  simplify.rs  tests.rs  type_analysis.rs
bb_data/src/tag/: gen.rs  mod.rs
bb_ffi/: .gitignore  Cargo.toml  build.rs
bb_ffi/src/: lib.rs
bb_generated/: Cargo.toml  build.rs
bb_generated/src/: lib.rs  pos.rs  version.rs
bb_generated/src/net/: mod.rs  sc.rs  tcp.rs
bb_generated/src/util/: mod.rs
bb_plugin/: Cargo.toml  build.rs
bb_plugin/src/: command.rs  ffi_impls.rs  lib.rs  math.rs  particle.rs  player.rs  store.rs  time.rs  world.rs
bb_plugin/src/block/: mod.rs  prop.rs
bb_plugin/src/internal/: gen.rs  mem.rs  mod.rs
bb_plugin/src/sync/: const_lock.rs  lazy_lock.rs  lock.rs  mod.rs
bb_plugin/src/time/: native.rs
bb_proxy/: Cargo.toml  build.rs
bb_proxy/src/: config.rs  conn.rs  default.toml  default.yml  error.rs  lib.rs  main.rs
bb_proxy/src/gnet/: mod.rs  other.rs  tcp.rs
bb_proxy/src/packet/: cb.rs  conv.rs  metadata.rs  mod.rs  sb.rs  v1_13.rs  v1_14.rs  v1_15.rs  v1_16.rs  v1_17.rs  v1_18.rs  v1_20.rs  v1_8.rs  v1_9.rs
bb_proxy/src/registry/: biomes.rs  chat_type.rs  damage_type.rs  dimensions.rs  mod.rs  test.rs
bb_proxy/src/stream/: mod.rs
bb_server/: Cargo.toml  build.rs
bb_server/benches/: terrain.rs
bb_server/src/: default.toml  default.yml  lib.rs  main.rs
bb_server/src/block/: custom.rs  ffi.rs  material.rs  mod.rs  store.rs  ty.rs  version.rs
bb_server/src/command/: enums.rs  ffi.rs  mod.rs  reader.rs  sender.rs  serialize.rs
bb_server/src/config/: mod.rs
bb_server/src/data/: crafting.rs  mod.rs
bb_server/src/enchantment/: mod.rs  ty.rs
bb_server/src/entity/: mod.rs  ty.rs  version.rs
bb_server/src/event/: json.rs  mod.rs  types.rs  world.rs
bb_server/src/item/: attack.rs  dig.rs  inventory.rs  mod.rs  shared.rs  stack.rs  ty.rs  ui.rs  version.rs
bb_server/src/math/: aabb.rs  mod.rs  point.rs  point_grid.rs  vec.rs  voronoi.rs
bb_server/src/net/: mod.rs  packet.rs  tests.rs
bb_server/src/particle/: ffi.rs  mod.rs  ty.rs  version.rs
bb_server/src/player/: click.rs  inventory.rs  mod.rs  scoreboard.rs  team.rs  tick.rs  window.rs
bb_server/src/plugin/: config.rs  json.rs  manager.rs  message.rs  mod.rs  plugin.rs  plugin.toml  plugin.yml
bb_server/src/rcon/: mod.rs
bb_server/src/tags/: mod.rs
bb_server/src/world/: blocks.rs  chunk.rs  chunks.rs  entities.rs  events.rs  init.rs  light.rs  mod.rs  players.rs  schematic.rs
client/: Cargo.toml  build.rs
client/src/: main.rs
client/src/graphics/: chunk.rs  init.rs  key.rs  mod.rs  text.rs
client/src/net/: mod.rs  reader.rs  writer.rs
client/src/player/: mod.rs
client/src/settings/: auth.rs  mod.rs  vanilla.rs
client/src/shader/: game.fs  game.vs  menu.vs  text.fs  text.vs  ui.fs  ui.vs
client/src/ui/: mod.rs
client/src/util/: load.rs
client/src/world/: mod.rs
common/: Cargo.toml  build.rs
common/benches/: chunk.rs
common/proto/: connection.proto
common/src/: lib.rs  registry.rs  version.rs
common/src/chunk/: fixed.rs  mod.rs  paletted.rs  section.rs
common/src/math/: chunk_pos.rs  der.rs  fast.rs  fpos.rs  mod.rs  point_grid.rs  pos.rs  rng.rs  voronoi.rs
common/src/net/: cb.rs  mod.rs  other.rs  sb.rs  tcp.rs
common/src/stream/: mod.rs
common/src/util/: buffer.rs  chat.rs  mod.rs  unordered_set.rs
data/: Cargo.toml  build.rs
data/src/: lib.rs
data/src/block/: block.rs  fixed.rs  mod.rs  old_names.txt  paletted.rs  versions.rs
data/src/entity/: mod.rs  version.rs
data/src/item/: mod.rs  version.rs
data/src/prismarine/: mod.rs
data/src/protocol/: json.rs  mod.rs  parse.rs
proxy/: Cargo.toml  build.rs
proxy/src/: conn.rs  main.rs  packet.rs  packet_stream.rs
proxy/src/bedrock/: listen.rs  mod.rs  stream.rs
proxy/src/java/: mod.rs  stream.rs
proxy/src/raknet/: conn.rs  listen.rs  mod.rs
proxy/src/version/: mod.rs  sb.rs
sc_cli/: Cargo.toml
sc_cli/src/: cli.rs  command.rs  conn.rs  handle.rs  main.rs
sc_cli/src/cli/: line.rs  (+1 more)
sc_common/: Cargo.toml
sc_common/benches/: chunk.rs  fast_math.rs
sc_common/proto/: world.proto
sc_common/src/: lib.rs  registry.rs  version.rs
sc_data/: Cargo.toml
sc_data/src/: dl.rs  lib.rs
sc_generated/: Cargo.toml  build.rs
sc_generated/proto/: connection.proto
sc_generated/src/: chunk_pos.rs  lib.rs  pos.rs  version.rs
sc_proxy/: Cargo.toml  build.rs
sc_proxy/src/: conn.rs  conv.rs  error.rs  lib.rs  main.rs
sc_server/: Cargo.toml  build.rs
sc_server/benches/: terrain.rs
sc_server/src/: default.yml  lib.rs  main.rs
server/: Cargo.toml  build.rs
server/benches/: terrain.rs
server/src/: main.rs
(+534 files in other folders)
