[workspace]
members = [
  # Contains some small utilities used in sc_server
  "sc_macros",
  # The transfer protocol. This is built to be read from/written to
  # by generated code, so it is not very easy to debug a packet.
  "sc_transfer",
  # The code generator. This takes json from sugarcane-data and
  # generates Rust source.
  "sc_data",
  # Common utilities. These are things like item parsers, UUIDs,
  # etc. This is anything that both the server and proxy need.
  "sc_common",
  # The Minecraft server. This is the first binary target. It is
  # a fully-functioning server.
  "sc_server",
  # The proxy. This is required for any clients to connection to
  # the server. It converts the sc_transfer protocol into the
  # Minecraft protocol using generated code.
  "sc_proxy",
  # A cli tool, used to connect to a Minecraft server and validate
  # that it is sending good data (things like making sure the client
  # won't leak chunks, checks for keep alive packets, etc).
  #
  # This is not part of the server! It is only used for testing.
  "sc_cli",
]

[profile.rust-analyzer]
inherits = "dev"
opt-level = 0

# Using cargo flamegraph, this is needed.
# See more: https://github.com/flamegraph-rs/flamegraph
[profile.release]
debug = true

[profile.dev]
opt-level = 2
lto = false

[profile.bench]
opt-level = 2
