[package]
name = "bb_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_proxy = { path = "../bb_proxy" }
bb_common = { path = "../bb_common" }
log = "0.4"

# auth
rand = "0.8.3"
rsa = "0.8.1"

# networking
mio = "0.8.5"
crossbeam-channel = "0.5.1"
parking_lot = "0.12.1"

# for the cli
rustyline = "10.1.1"
crossterm = "0.26.0"
ansi_term = "0.12.1"
