[package]
name = "bb_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_proxy = { path = "../bb_proxy" }
bb_common = { path = "../bb_common" }
log = "0.4"

# auth
rand = "0.8"
rsa = "0.8.1"

# networking
mio = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# for the cli
rustyline = "11.0"
crossterm = "0.26"
ansi_term = "0.12"
