[package]
name = "bb_common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_transfer = { path = "../bb_transfer" }
bb_macros = { path = "../bb_macros" }
# bb_generated = { path = "../bb_generated" }

# flexi_logger = "0.17"
log4rs = { version = "1.0.0", optional = true }
anyhow = "1.0.0"
log = "0.4"

crossbeam-channel = "0.5.1"

asn1 = "0.5.3"
rsa = { version = "0.4.0", optional = true }
sha-1 = "0.9.6"
byteorder = "1.4"

num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.20"
strum_macros = "0.20"

bytes = "1.0.1"
rand = { version = "0.8.3", optional = true }
rand_core = { version = "0.6.3", optional = true }
wyhash = "0.5.0"
num_cpus = "1.13.0"
flate2 = { version = "1.0", optional = true }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# config file
#yaml-rust = "0.4.5"
toml = "0.5"

[build-dependencies]
# We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
# tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
bb_data = { path = "../bb_data" }

[dev-dependencies]
pprof = { version = "0.4.3", features = ["criterion", "flamegraph"] }
criterion = "0.3.4"
pretty_assertions = "1.2.0"

[features]
default = ["host"]
host = ["log4rs", "flate2", "rsa", "rand", "rand_core"]

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "fast_math"
harness = false
