[package]
name = "bb_common"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_transfer = { path = "../bb_transfer" }
bb_macros = { path = "../bb_macros" }
# bb_generated = { path = "../bb_generated" }

# flexi_logger = "0.17"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4.19", optional = true }
libc = "0.2"

crossbeam-channel = "0.5"
# better locks
parking_lot = { version = "0.12", optional = true }

asn1 = "0.15"
rsa = { version = "0.8.1", optional = true }
sha-1 = "0.10.1"
byteorder = "1.4"

num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.24"
strum_macros = "0.24"

rand = { version = "0.8", optional = true }
rand_core = { version = "0.6", optional = true }
wyhash = "0.5.0"
num_cpus = "1.15"
flate2 = { version = "1.0", optional = true }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

indexmap = "1.9"

[build-dependencies]
# We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
# tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
bb_data = { path = "../bb_data" }

[dev-dependencies]
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }
criterion = "0.4.0"
pretty_assertions = "1.3.0"

[features]
default = ["host"]
host = ["chrono", "flate2", "rsa", "rand", "rand_core", "parking_lot"]
# If set, then logs will use UTC. If disabled, then logs will use the local timezone.
utclogs = []

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "fast_math"
harness = false
