[package]
name = "bb_data"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
convert_case = "0.6.0"

ureq = "2"
flate2 = "1.0.24"

[dev-dependencies]
pretty_assertions = "1.4"
