[package]
name = "bb_ffi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-types = { version = "2.2.1", default-features = false, features = ["std"], optional = true }

[build-dependencies]
cbindgen = { version = "0.20.0", optional = true }

[features]
host = ["wasmer-types", "cbindgen"]
