[package]
name = "bb_plugin"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_common = { path = "../bb_common", default-features = false }
bb_ffi = { path = "../bb_ffi" }
log = "0.4"
parking_lot = "0.12.0"

[build-dependencies]
bb_data = { path = "../bb_data" }
