[package]
name = "bb_proxy"
version = "0.2.0"
edition = "2021"

[lib]
name = "bb_proxy"
path = "src/lib.rs"

[[bin]]
name = "bb_proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_common = { path = "../bb_common" }
bb_transfer = { path = "../bb_transfer" }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

md5 = "0.7.0"
rand = "0.8.3"
rsa = "0.4.0"
sha-1 = "0.9.6"

# for mojang auth
ureq = "2"

parking_lot = "0.11.2"
mio = { version = "0.7.13", default-features = false, features = ["os-poll", "net"] }
crossbeam-channel = "0.5.1"

# For icon.png
image = { version = "0.23.14", default-features = false, features = ["png"] }
base64 = "0.13.0"

cfb8 = "0.7.1"
aes = "0.7.2"
miniz_oxide = "0.4.4"
flate2 = "1.0"
ringbuf = "0.2.4"
smallvec = "1.8.0"

# profiling
pprof = { version = "0.6.1", features = ["protobuf"], optional = true }

[build-dependencies]
bb_data = { path = "../bb_data" }
