[package]
name = "bb_proxy"
version = "0.2.0"
edition = "2021"

[lib]
name = "bb_proxy"
path = "src/lib.rs"

[[bin]]
name = "bb_proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_common = { path = "../bb_common" }
bb_macros = { path = "../bb_macros" }
bb_transfer = { path = "../bb_transfer" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

md5 = "0.7.0"
rand = "0.8.3"
rsa = "0.6.1"
sha-1 = "0.10.1"

# for mojang auth
ureq = "2"

parking_lot = "0.12.1"
mio = { version = "0.8.5", default-features = false, features = ["os-poll", "net"] }
crossbeam-channel = "0.5.1"

# For icon.png
image = { version = "0.24.5", default-features = false, features = ["png"] }
base64 = "0.21.0"

cfb8 = "0.7.1"
aes = "0.7.2"
miniz_oxide = "0.7.1"
flate2 = "1.0"
smallvec = "1.8.0"

# profiling
pprof = { version = "0.11.0", features = ["protobuf"], optional = true }

# command line args
clap = { version = "4.1.4", features = ["derive"] }

concat-idents = "1.1.3"

[build-dependencies]
bb_data = { path = "../bb_data" }
