[package]
name = "bb_proxy"
version = "0.2.0"
edition = "2021"

[lib]
name = "bb_proxy"
path = "src/lib.rs"

[[bin]]
name = "bb_proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_common = { path = "../bb_common" }
bb_macros = { path = "../bb_macros" }
bb_transfer = { path = "../bb_transfer" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

md5 = "0.7.0"
rand = "0.8"
rsa = "0.8"
sha-1 = "0.10"

# for mojang auth
ureq = "2"

parking_lot = "0.12"
mio = { version = "0.8", default-features = false, features = ["os-poll", "net"] }
crossbeam-channel = "0.5"

# For icon.png
image = { version = "0.24.6", default-features = false, features = ["png"] }
base64 = "0.21"

cfb8 = "0.7"
aes = "0.7"
miniz_oxide = "0.7.1"
flate2 = "1.0"
smallvec = "1.10.0"

# profiling
pprof = { version = "0.11", features = ["protobuf"], optional = true }

# command line args
clap = { version = "4.3.1", features = ["derive"] }

concat-idents = "1.1"

[build-dependencies]
bb_data = { path = "../bb_data" }
