[package]
name = "bb_server"
version = "0.2.0"
edition = "2021"

[lib]
name = "bb_server"
path = "src/lib.rs"

[[bin]]
name = "bb_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_common = { path = "../bb_common" }
bb_transfer = { path = "../bb_transfer" }
bb_server_macros = { path = "../bb_server_macros" }
bb_macros = { path = "../bb_macros" }
# logger
log = "0.4"

#rng
rand = "0.8"
# par_iter
rayon = "1.7"
# networking
mio = { version = "0.8", default-features = false, features = ["os-poll", "net"] }
# better channels
crossbeam-channel = "0.5"
# better locks
parking_lot = "0.12"
# better errors
thiserror = "1.0"

# number stuff. TODO: replace
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"

# noise maps. TODO: replace
noise = { version = "0.8", default-features = false }

# scripting language
panda = { git = "https://gitlab.com/macmv/panda", features = ["docs"], optional = true }

# command line args
clap = { version = "4.3.1", features = ["derive"] }

# plugins
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.19", default-features = false, features = ["macros"], optional = true }
wasmer = { version = "2.2.1", default-features = false, features = ["default-cranelift", "default-universal"], optional = true }
bb_ffi = { path = "../bb_ffi", features = ["host"], optional = true }

# better thread::sleep
spin_sleep = "1.1.1"

# rcon parsing TODO: bb_common::util::Buffer should support little endian
byteorder = "1.4"

# ctrlc without spawning an entire extra thread
nix = "0.26.2"

[build-dependencies]
bb_data = { path = "../bb_data" }

[dev-dependencies]
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }
criterion = "0.4.0"
pretty_assertions = "1.3.0"

[features]
default = ["panda_plugins"]
panda_plugins = ["panda"]
socket_plugins = []
python_plugins = ["pyo3"]
wasm_plugins = ["wasmer", "bb_ffi"]

[[bench]]
name = "terrain"
harness = false
