[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
common = { path = "../common" }

futures = "0.3.14"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

winit = "0.24"
vulkano = "0.23"
vulkano-win = "0.23"
vulkano-shaders = "0.23"

[build-dependencies]
data = { path = "../data" }
