[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
common = { path = "../common" }
data = { path = "../data" }

futures = "0.3.14"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1.5"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

winit = "0.24"
vulkano = "0.23"
vulkano-win = "0.23"
vulkano-shaders = "0.23"

png = "0.16.8"
rusttype = { version = "0.9" }

rand = "0.8.3"
rsa = "0.4.0"
sha-1 = "0.9.6"
reqwest = { version = "0.11.3", features = ["json"] }
cgmath = "0.18.0"

directories = "3.0.2"

[build-dependencies]
data = { path = "../data" }
