[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
tonic-reflection = "0.1"
prost = "0.7"
prost-types = "0.7"
futures = "0.3.14"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1.5"

[build-dependencies]
tonic-build = "0.4"
