[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.17"
log = "0.4"

tonic = "0.4"
prost = "0.7"
prost-types = "0.7"

byteorder = "1.4"
futures = "0.3.14"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1.5"

num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.20"
strum_macros = "0.20"
bytes = "1.0.1"
rand_core = "0.6.0"
rand = "0.8.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
# We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
tonic-build = { version = "0.4", default-features = false, features = ["transport", "prost"] }
data = { path = "../data" }
