[package]
name = "data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
convert_case = "0.4.0"
itertools = "0.10.0"

proc-macro2 = "1.0"
quote = "1.0"
