[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
log = "0.4"
ringbuf = "0.2.4"
tonic = "0.4"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
