[package]
name = "sc_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc_proxy = { path = "../sc_proxy" }
sc_common = { path = "../sc_common" }
log = "0.4"
log4rs = "1.0.0"
anyhow = "1.0.44"

# auth
rand = "0.8.3"
rsa = "0.4.0"

# async nonsense
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"

# networking
async-stream = "0.3"
mio = "0.7.13"
crossbeam-channel = "0.5.1"
parking_lot = "0.11.2"

# for the cli
rustyline = "8.2.0"
crossterm = "0.21.0"
ansi_term = "0.12.1"
