[package]
name = "sc_common"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc_macros = { path = "../sc_macros" }
sc_generated = { path = "../sc_generated" }

# flexi_logger = "0.17"
log4rs = "1.0.0"
anyhow = "1.0.0"
log = "0.4"

tonic = "0.5"
prost = "0.8"
prost-types = "0.8"

byteorder = "1.4"
futures = "0.3.14"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1.5"

asn1 = "0.5.3"
rsa = "0.4.0"
sha-1 = "0.9.6"

num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.20"
strum_macros = "0.20"
bytes = "1.0.1"
rand = "0.8.3"
rand_core = "0.6.3"
wyhash = "0.5.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[build-dependencies]
# We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
sc_data = { path = "../sc_data" }

[dev-dependencies]
pprof = { version = "0.4.3", features = ["criterion", "flamegraph"] }
criterion = "0.3.4"

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "fast_math"
harness = false
