[package]
name = "sc_data"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.4.0"
itertools = "0.10.0"

ureq = "2.3"
