[package]
name = "sc_generated"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc_transfer = { path = "../sc_transfer" }

log = "0.4"

tonic = "0.5"
prost = "0.8"
prost-types = "0.8"

byteorder = "1.4"

num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.20"
strum_macros = "0.20"
rand = "0.8.3"

serde = "1.0"

[build-dependencies]
# We need to disable default features, as that uses rustfmt, which is not installed in Docker containers.
tonic-build = { version = "0.5", default-features = false, features = ["transport", "prost"] }
sc_data = { path = "../sc_data" }

[dev-dependencies]
pprof = { version = "0.4.3", features = ["criterion", "flamegraph"] }
criterion = "0.3.4"
