[package]
name = "sc_proxy"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc_common = { path = "../sc_common" }
log = "0.4"
tonic = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

md5 = "0.7.0"
rand = "0.8.3"
rsa = "0.4.0"
sha-1 = "0.9.6"

reqwest = { version = "0.11.3", features = ["json"] }

tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# For icon.png
image = "0.23.14"
base64 = "0.13.0"
