[package]
name = "sc_proxy"
version = "0.1.1"
edition = "2021"

[lib]
name = "sc_proxy"
path = "src/lib.rs"

[[bin]]
name = "sc_proxy"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc_common = { path = "../sc_common" }
sc_transfer = { path = "../sc_transfer" }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

md5 = "0.7.0"
rand = "0.8.3"
rsa = "0.4.0"
sha-1 = "0.9.6"

reqwest = { version = "0.11.3", features = ["json", "blocking"] }

parking_lot = "0.11.2"
mio = "0.7.13"
crossbeam-channel = "0.5.1"

# For icon.png
image = "0.23.14"
base64 = "0.13.0"

cfb8 = "0.7.1"
aes = "0.7.2"
miniz_oxide = "0.4.4"
flate2 = "1.0"
ringbuf = "0.2.4"
