[package]
name = "sc_server"
version = "0.1.1"
edition = "2021"

[lib]
name = "sc_server"
path = "src/lib.rs"

[[bin]]
name = "sc_server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc_common = { path = "../sc_common" }
sc_transfer = { path = "../sc_transfer" }
log = "0.4"

rayon = "1.5.1"
mio = "0.7.13"
crossbeam-channel = "0.5.1"
parking_lot = "0.11.2"

num = "0.4"
num-traits = "0.2"
num-derive = "0.3"

noise = { version = "0.7.0", default-features = false }

sugarlang = { git = "https://gitlab.com/macmv/sugarlang", features = ["docs"] }

# config file
yaml-rust = "0.4.5"

[build-dependencies]
sc_data = { path = "../sc_data" }

[dev-dependencies]
pprof = { version = "0.4.3", features = ["criterion", "flamegraph"] }
criterion = "0.3.4"

[[bench]]
name = "terrain"
harness = false
