[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
log = "0.4"
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
futures = "0.3.14"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1.5"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"

noise = "0.7.0"

Boa = "0.11.0"

[build-dependencies]
data = { path = "../data" }
