[package]
name = "server"
version = "0.1.1"
edition = "2018"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
log = "0.4"

tonic = "0.5"
prost = "0.8"
prost-types = "0.8"
futures = "0.3.14"
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-stream = "0.1.5"

num = "0.4"
num-traits = "0.2"
num-derive = "0.3"

noise = "0.7.0"

sugarlang = { git = "https://gitlab.com/macmv/sugarlang" }

[build-dependencies]
data = { path = "../data" }

[dev-dependencies]
pprof = { version = "0.4.3", features = ["criterion", "flamegraph"] }
criterion = "0.3.4"

[[bench]]
name = "terrain"
harness = false
