[package]
name = "vanilla-terrain"
version = "0.1.0"
edition = "2021"

[lib]
name = "vanilla_terrain"
crate-type = ["lib", "cdylib"]

[dependencies]
bb_plugin = { path = "../../../../bb_plugin" }
float-ord = "0.3.2"
parking_lot = "0.12"
md5 = "0.7.0"

# Separate workspace
[workspace]

[profile.release]
lto = true

[profile.rust-analyzer]
inherits = "dev"
opt-level = 0

[dev-dependencies]
pretty_assertions = "1.4"
pprof = { version = "0.13", features = ["flamegraph"] }
criterion = "0.5"

[[bench]]
name = "chunk"
harness = false
